--- a/index.ipynb
+++ b/index.ipynb
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zero_to_three = [0, 1, 2, 3]"
+    "zero_to_three = [0, 1, 2, 3]\n"
    ]
   },
   {
