--- a/index.ipynb
+++ b/index.ipynb
@@ -96,12 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "for number in zero_to_three:\n",
-    "    print(number)"
+    "    print(number)\n",
+    "    "
    ]
   },
   {
